--- a/game.html
+++ b/game.html
@@ -17,3 +17,10 @@
     <link rel="stylesheet" href="style/style.css" />
     <script src="js/main.js" type="text/javascript"></script>
 </head>
+
+<body ontouchstart="">
+    <div class="fullscreen-wrapper" id="happy-outer"> <img src="images/happy.png" class="happy-face screen-center" /> </div>
+    <div class="fullscreen-wrapper" id="sad-outer"> <img src="images/sad.png" class="sad-face screen-center" /> </div>
+</body>
+
+</html>
