--- a/game.html
+++ b/game.html
@@ -35,6 +35,18 @@
             </div>
         </div>
     </div>
+    <div id="game-won" data-theme="e" data-role="dialog">
+        <div data-role="header">
+            <h4>You Win!</h4>
+        </div>
+        <div data-role="content">
+            <div id="win-content"> You have won the game! Play again? </div>
+            <fieldset class="ui-grid-a">
+                <div class="ui-block-a"><button type="submit" class="back-to-game" data-theme="c">Back</button></div>
+                <div class="ui-block-b"> <a href="#new-game" data-rel="dialog" data-role="button" data-icon="grid"> Start A New Game </a> </div>
+            </fieldset>
+        </div>
+    </div>	
 </body>
 
 </html>
