--- a/game.html
+++ b/game.html
@@ -65,6 +65,15 @@
                 <div class="ui-block-b"><button type="submit" id="start-game" data-theme="b">Start</button></div>
             </fieldset>
         </div>
+    </div>
+    <div data-role="dialog" data-theme="e" id="help-page">
+        <div data-role="header">
+            <h4>About</h4>
+        </div>
+        <div data-role="content" class="thin-content">
+            <p>I am Jianyang Zhang and I made this game for fun. You can check out <a href="https://github.com/JianyangZhang">here</a> for my other lame projects, or find out more about me.</p>
+            <p>Have fun beating/get beaten by my AI!</p>
+        </div>
     </div>	
 </body>
 
