--- a/game.html
+++ b/game.html
@@ -74,7 +74,20 @@
             <p>I am Jianyang Zhang and I made this game for fun. You can check out <a href="https://github.com/JianyangZhang">here</a> for my other lame projects, or find out more about me.</p>
             <p>Have fun beating/get beaten by my AI!</p>
         </div>
-    </div>	
+    </div>
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-32333016-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>	
 </body>
 
 </html>
